// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Phase 29 Tranche 7c — narrative snapshot stability > English preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ðə kɪŋ siːz ðə wulh",
    },
    {
      "english": "the dogs see the wolves",
      "target": "ðə dɔgs siː ðə wulhs",
    },
    {
      "english": "i give you the bread",
      "target": "aj gɪvɪŋ ju",
    },
    {
      "english": "the king walks at the river",
      "target": "ðə kɪŋ wɔkɪŋz æt ðə ɹɪvəɹ",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ðə kɪŋ nat siːz ðə wulh",
    },
  ],
  "preset": "english",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Romance preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "ɾege βideɾet lupuum",
    },
    {
      "english": "the dogs see the wolves",
      "target": "kakane βideɾent lulupuum",
    },
    {
      "english": "i give you the bread",
      "target": "ego daɾeo tuum",
    },
    {
      "english": "the king walks at the river",
      "target": "ɾege ambulaɾet slume",
    },
    {
      "english": "the king does not see the wolf",
      "target": "ɾege non βideɾet lupuum",
    },
  ],
  "preset": "romance",
}
`;

exports[`Phase 29 Tranche 7c — narrative snapshot stability > Toki Pona preset translator output (30 gens) is stable 1`] = `
{
  "generation": 30,
  "outputs": [
    {
      "english": "the king sees the wolf",
      "target": "niminimi lukin toweli",
    },
    {
      "english": "the dogs see the wolves",
      "target": "totoweli lukin totoweli",
    },
    {
      "english": "i give you the bread",
      "target": "mi pana sina",
    },
    {
      "english": "the king walks at the river",
      "target": "niminimi tawatawo taki telotuno",
    },
    {
      "english": "the king does not see the wolf",
      "target": "niminimi ala lukin toweli",
    },
  ],
  "preset": "tokipona",
}
`;
